2009-12-30  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Adam Barth.

        Remove unused code from V8DOMWrapper.

        * bindings/v8/V8DOMWrapper.cpp: Removed code that I added but it's no longer used.
        * bindings/v8/V8DOMWrapper.h: Ditto.

2009-12-30  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Adam Barth.

        [V8] Generate configuring undetectable collection.
        https://bugs.webkit.org/show_bug.cgi?id=33063

        Refactoring, covered by existing tests.

        * bindings/scripts/CodeGeneratorV8.pm: Added GenerateImplementationMasqueradeAsUndefined.
        * bindings/v8/DerivedSourcesAllInOne.cpp: Touched to keep IB-based builds happy.
        * bindings/v8/V8DOMWrapper.cpp:
        (WebCore::V8DOMWrapper::getTemplate): Removed hand-configuring.

2009-12-30  Zelidrag Hornung  <zelidrag@chromium.org>

        Reviewed by Dimitri Glazkov.

        Added ability for PopupMenuClient to signal when
        a) selection changed, and
        b) weather suggested value should be accepted when popup menu closes

        No new tests since this new functionality (autocomplete suggestions)
        is intentionally hidden from everything else than renderer.

        * platform/PopupMenuClient.h:
        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupContainer::hidePopup):
        (WebCore::PopupListBox::handleKeyEvent):
        (WebCore::PopupListBox::abandon):
        (WebCore::PopupListBox::acceptIndex):
        (WebCore::PopupListBox::selectIndex):
        (WebCore::PopupListBox::clearSelection):
        (WebCore::PopupListBox::hidePopup):
        * platform/gtk/PopupMenuGtk.cpp:
        (WebCore::PopupMenu::menuUnmapped):
        * platform/mac/PopupMenuMac.mm:
        (WebCore::PopupMenu::show):
        * platform/qt/QtFallbackWebPopup.cpp:
        (WebCore::QtFallbackWebPopup::hidePopup):
        * platform/win/PopupMenuWin.cpp:
        (WebCore::PopupMenu::hide):