@@ -1,3 +1,12 @@
+2009-12-30  Darin Fisher  <darin@chromium.org>
+
+        Reviewed by David Levin.
+
+        [Chromium] Delete ResourceRequest::securityInfo
+        https://bugs.webkit.org/show_bug.cgi?id=26847
+
+        * platform/network/chromium/ResourceRequest.h:
+
 2009-12-30  Dimitri Glazkov  <dglazkov@chromium.org>
 
         Reviewed by Adam Barth.
